# Boy_4

./: .gitignore  Boy_out.stl  CMakeLists.txt  Generator.h  cutter.cpp  cutter.h  external_dependencies.cmake  external_dependencies.txt  stlcopy.cpp  stlloader.cpp  stlloader.h
3D/: CMakeLists.txt
3D/include/3D/: Facet.h  FileUtilities.h  Mesh.h  Normal.h  Plane.h  Transformation.h  Vertex.h
3D/src/: Facet.cpp  FileUtilities.cpp  Normal.cpp  Plane.cpp  Transformation.cpp
3D/test/: CMakeLists.txt  cut_test.cpp
